Update tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,27 +1,39 @@
 # large history
 set -g history-limit 10000
 
+# Copy/paste
+set-option -g default-command 'exec reattach-to-user-namespace -l zsh'
+
 # Colours
 set -g mode-bg black
-set -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
-set -g pane-active-border-fg red
+set -g default-terminal "screen-256color"
+set -g pane-active-border-fg "#6400d4"
 
 # Status Bar
 set -g status-utf8 on
-set -g status-justify right
 set -g status-bg black
-set -g status-fg cyan
+set -g status-fg "#6400d4"
 set -g status-interval 5
 set -g visual-activity on
-set -g status-justify centre
-set -g status-left-length 100
+set -g status-justify left
+set -g status-left-length 200
 set -g status-right-length 140
-set -g status-left '#[fg=pink]#H #[fg=white]• #[fg=#5f00d7]#(uname -r)#[default]'
-#set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a %l:%M%p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-left '#[bg=#6400d4]#(pwd)#[default] • '
+set -g status-right '[#(whoami)] #(date +"%d/%m/%y %H:%M")'
 
 # Titles
 set -g set-titles on
-set -g set-titles-string '#H:#S.#I.#P #W #T'
+set -g set-titles-string '#S:#I.#P #W'
+
+# default window title colors
+set-window-option -g window-status-fg "#6400d4"
+set-window-option -g window-status-bg black
+set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg "#6400d4"
+set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-attr bright
 
 # Window
 set -g automatic-rename
