Add CPU usage to footer in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,14 +16,14 @@ set -g status-fg "#6400d4"
 set -g status-interval 5
 set -g visual-activity on
 set -g status-justify left
-set -g status-left-length 200
+set -g status-left-length 120
 set -g status-right-length 140
-set -g status-left '#[bg=#6400d4]#(pwd)#[default] • '
-set -g status-right '[#(whoami)] #(date +"%d/%m/%y %H:%M")'
+set -g status-left '#[bg=#6400d4] #(whoami) #[default] • '
+set -g status-right "#(top -l 1 | head -n 10 | grep CPU | sed 's/, /n /g') #[bg=#6400d4] #(date +'%d/%m/%y %H:%M') "
 
 # Titles
 set -g set-titles on
-set -g set-titles-string '#S:#I.#P #W'
+set -g set-titles-string '#W'
 
 # default window title colors
 set-window-option -g window-status-fg "#6400d4"
