Reattach tmux session if one exists, otherwise create a new one

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
+
 # large history
 set -g history-limit 10000
 
