Changed colours for tmux and powerline options

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,8 @@ set -g visual-activity on
 set -g status-justify left
 set -g status-left-length 120
 set -g status-right-length 140
-set -g status-left '#[bg=#6400d4] #(whoami) #[default] • '
-set -g status-right "#(top -l 1 | head -n 10 | grep CPU | sed 's/, /n /g') #[bg=#6400d4] #(date +'%d/%m/%y %H:%M') "
+set -g status-left '#[bg=#6400d4,fg=white] #(whoami) #[default] • '
+set -g status-right "#(top -l 1 | head -n 10 | grep CPU | sed 's/, /n /g') #[bg=#6400d4,fg=white] #(date +'%d/%m/%y %H:%M') "
 
 # Titles
 set -g set-titles on
