Bind pipe/minus key for splitting screen vertically/horizontally

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,3 +44,7 @@ set -g automatic-rename
 # Mouse
 set -g mode-mouse on
 set -g mouse-select-pane on
+
+# Bind pipe/minus key for splitting screen vertically/horizontally
+bind | split-window -h
+bind - split-window -v
