--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,8 +42,8 @@ set-window-option -g window-status-current-attr bright
 set -g automatic-rename
 
 # Mouse
-set -g mode-mouse on
-set -g mouse-select-pane on
+#set -g mode-mouse on
+#set -g mouse-select-pane on
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
