Resize using mouse

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,9 +42,10 @@ set-window-option -g window-status-current-attr bright
 set -g automatic-rename
 
 # Mouse
-#set -g mode-mouse on
-#set -g mouse-select-pane on
-set -g mouse on
+set -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+#set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # Bind pipe/minus key for splitting screen vertically/horizontally
