--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ new-session -n $HOST
 set -g history-limit 10000
 
 # Copy/paste
-set-option -g default-command 'exec reattach-to-user-namespace -l zsh'
+set-option -g default-command 'reattach-to-user-namespace -l zsh'
 
 # Colours
 set -g mode-bg black
