New style terminal

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,38 +4,35 @@ new-session -n $HOST
 # large history
 set -g history-limit 10000
 
-# Copy/paste
-set-option -g default-command 'reattach-to-user-namespace -l zsh'
-
 # Colours
-set -g mode-bg black
+set -g mode-bg "#0098c7"
 set -g default-terminal "screen-256color"
-set -g pane-active-border-fg "#6400d4"
+set -g pane-active-border-fg "#0098c7"
 
 # Status Bar
 set -g status-utf8 on
-set -g status-bg black
-set -g status-fg "#6400d4"
+set -g status-bg "#0098c7"
+set -g status-fg "#0098c7"
 set -g status-interval 5
 set -g visual-activity on
 set -g status-justify left
 set -g status-left-length 120
 set -g status-right-length 140
-set -g status-left '#[bg=#6400d4,fg=white] #(whoami) #[default] • '
-set -g status-right "#(top -l 1 | head -n 10 | grep CPU | sed 's/, /n /g') #[bg=#6400d4,fg=white] #(date +'%d/%m/%y %H:%M') "
+set -g status-left '#[bg=#0098c7,fg=white]#{pane_current_path} '
+set -g status-right "#(whoami)@#(hostname) #(date +'%d/%m/%y %H:%M') "
 
 # Titles
 set -g set-titles on
 set -g set-titles-string '#W'
 
 # default window title colors
-set-window-option -g window-status-fg "#6400d4"
-set-window-option -g window-status-bg black
+set-window-option -g window-status-fg "#0098c7"
+set-window-option -g window-status-bg "#0098c7"
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg "#6400d4"
-set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-fg "#0098c7"
+set-window-option -g window-status-current-bg "#0098c7"
 set-window-option -g window-status-current-attr bright
 
 # Window
