Change position of tmux status bar objects

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,8 @@ set -g visual-activity on
 set -g status-justify left
 set -g status-left-length 120
 set -g status-right-length 140
-set -g status-left '#[bg=#0098c7,fg=white]#{pane_current_path} '
-set -g status-right "#[bg=#0098c7,fg=white]#(whoami)@#(hostname) #(date +'%d/%m/%y %H:%M') "
+set -g status-right '#[bg=#0098c7,fg=white]#{pane_current_path} '
+set -g status-left "#[bg=#0098c7,fg=white]#(whoami)@#(hostname) #(date +'%d/%m/%y %H:%M') "
 
 # Titles
 set -g set-titles on
