Bind R to reload config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,3 +44,5 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 # Bind pipe/minus key for splitting screen vertically/horizontally
 bind | split-window -h
 bind - split-window -v
+
+bind r source-file ~/dotfiles/.tmux.conf\; display "Tmux config reloaded."
