Fix path to tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,4 +45,4 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 bind | split-window -h
 bind - split-window -v
 
-bind r source-file ~/dotfiles/.tmux.conf\; display "Tmux config reloaded."
+bind r source-file ~/.tmux.conf\; display "Tmux config reloaded."
